--- a/m2/w2/d3/Esercitazione/package.json
+++ b/m2/w2/d3/Esercitazione/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "compile:sass": "node-sass sass/style.scss css/stile.css"
+    "compile:sass": "node-sass sass/style.scss css/stile.css -w"
   },
   "author": "",
   "license": "ISC",
