modifiche progetto Angular

--- a/m3/w3/d5-Progetto/Angular1/package.json
+++ b/m3/w3/d5-Progetto/Angular1/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "backend": "json-server db.json --delay"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.33",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
